--- a/package.json
+++ b/package.json
@@ -98,12 +98,14 @@
     "@octokit/rest": "^16.38.1",
     "@types/archiver": "2.1.2",
     "@types/bluebird": "^3.5.29",
+    "@types/body-parser": "^1.17.1",
     "@types/chai": "^4.2.7",
     "@types/chai-as-promised": "^7.1.1",
     "@types/chokidar": "^1.7.5",
     "@types/common-tags": "^1.8.0",
     "@types/dockerode": "2.5.6",
     "@types/ejs": "^3.0.0",
+    "@types/express": "^4.17.2",
     "@types/fs-extra": "7.0.0",
     "@types/intercept-stdout": "^0.1.0",
     "@types/is-root": "1.0.0",
